# qml_hardware_controls

./: .clang-format  .gitignore  90-hardware-controls-brightness.rules  CMakeLists.txt  README.md  install.sh
cmake/: utils.cmake
src/: CMakeLists.txt  brightness.cpp  brightness.h  enums.h  hardware_manager.cpp  hardware_manager.h
src/collection/: cpu_collector.cpp  cpu_collector.h  cpu_data.h
src/cpu/: sampler.cpp  sampler.h
src/daemon/: CMakeLists.txt  daemon.cpp  daemon.h
src/samplers/: cpu_sampler_simple.cpp  cpu_sampler_simple.h  i_sampler.h
src/tests/: CMakeLists.txt  brightness_test.cpp  test.qml  the_test.cpp
src/util/: i_sampler.h
